generated/nixidy/prod/autobrr/Service-autobrr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: autobrr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: autobrr
    app.kubernetes.io/service: autobrr
  name: autobrr
  namespace: media
spec:
  ports:
    - name: http
      port: 7474
      protocol: TCP
      targetPort: 7474
  selector:
    app.kubernetes.io/controller: autobrr
    app.kubernetes.io/instance: autobrr
    app.kubernetes.io/name: autobrr
  type: ClusterIP
