generated/nixidy/prod/autobrr/HTTPRoute-autobrr.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: autobrr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: autobrr
  name: autobrr
  namespace: media
spec:
  hostnames:
    - autobrr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: autobrr
          namespace: media
          port: 7474
          weight: 1
